Fix: Bootstrap 4 styling for the paging control on smaller screens - align to center
DD-1355

--- a/css/dataTables.bootstrap4.scss
+++ b/css/dataTables.bootstrap4.scss
@@ -194,9 +194,12 @@ div.dataTables_scrollFoot {
 		div.dataTables_paginate {
 			text-align: center;
 		}
+
+		div.dataTables_paginate ul.pagination {
+			justify-content: center !important;
+		}
 	}
 }
-
 
 //
 // Bootstrap provides a range of styling options for table's via class name
